passport js and session management completed
